# mauiman

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Mainpage.dox  README.md  metainfo.yaml
lib/: CMakeLists.txt  MauiManConfig.cmake.in  MauiManConfig.cmake.in.5  MauiManConfig.cmake.in.6
lib/src/: CMakeLists.txt  mauimanutils.cpp  mauimanutils.h  settingsstore.cpp  settingsstore.h
lib/src/modules/: accessibilitymanager.cpp  accessibilitymanager.h  backgroundmanager.cpp  backgroundmanager.h  formfactormanager.cpp  formfactormanager.h  inputdevicesmanager.cpp  inputdevicesmanager.h  screenmanager.cpp  screenmanager.h  thememanager.cpp  thememanager.h
mauiman/: CMakeLists.txt
mauiman/code/: mauimanutils.cpp
mauiman/code/modules/: backgroundmanager.cpp  backgroundmanager.h  screenmanager.cpp  screenmanager.h  thememanager.cpp  thememanager.h
server/: CMakeLists.txt  org.mauiman.Manager.desktop  org.mauiman.Manager.service.in.5  org.mauiman.Manager.service.in.6  org.mauiman.server.desktop  org.mauiman.server.service.in
server/src/: CMakeLists.txt  main.cpp  server.cpp  server.h
server/src/modules/: accessibility.cpp  accessibility.h  background.cpp  background.h  formfactor.cpp  formfactor.h  inputdevices.cpp  inputdevices.h  locale.cpp  locale.h  org.mauiman.Accessibility.xml  org.mauiman.FormFactor.xml  org.mauiman.InputDevices.xml  org.mauiman.Screen.xml  org.mauiman.Shell.xml  org.mauiman.Theme.xml  screen.cpp  screen.h  theme.cpp  theme.h
